--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,5 +1,6 @@
 .teamContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  padding: 0 auto;
 }
