--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,7 +3,7 @@
 @import "select";
 @import "header";
 @import "logo";
-@import "table";
+@import "standings";
 @import "scorers";
 @import "fixtures";
 
