--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,8 +1,8 @@
 header {
-  color: #ffffff;
+  color: #360037;
   max-height: 100px;
   width: 100%;
-  background: #360037;
+  background: #ffffff;
   margin-bottom: 2rem;
 }
 
