--- a/src/sass/_fixtures.scss
+++ b/src/sass/_fixtures.scss
@@ -3,7 +3,7 @@
   td {
     padding: 5px 40px;
     text-align: center;
-    border: solid #360037 1px;
+    border-bottom: solid #360037 1px;
   }
   .fixtures_description {
     background: #360037;
