--- a/src/sass/_logo.scss
+++ b/src/sass/_logo.scss
@@ -1,7 +1,7 @@
 .logo_image {
-  width: 100px;
-  height: 100px;
-
+  width: 10rem;
+  height: 8rem;
+  overflow: hidden;
   img {
     width: 100%;
     height: 100%;
