--- a/src/sass/_scorers.scss
+++ b/src/sass/_scorers.scss
@@ -3,7 +3,7 @@
   td {
     padding: 5px 40px;
     text-align: center;
-    border: solid #360037 1px;
+    border-bottom: solid #360037 1px;
   }
   .scorers-header {
     padding: 5px 40px;
