--- a/src/sass/_standings.scss
+++ b/src/sass/_standings.scss
@@ -9,7 +9,7 @@
   td {
     padding: 5px 40px;
     text-align: center;
-    border: solid #360037 1px;
+    border-bottom: solid #360037 1px;
   }
   .team-header {
     padding: 5px 40px;
