--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,14 +7,11 @@
 @import "scorers";
 @import "fixtures";
 @import "footer";
+@import "colors";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Space Mono", monospace;
-}
-
-form {
-  text-align: center;
 }
