react router and some styles added

--- a/src/sass/_fixtures.scss
+++ b/src/sass/_fixtures.scss
@@ -18,3 +18,10 @@
     background: $table-fourth-color;
   }
 }
+
+.fixtures_select {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
