--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,5 +1,5 @@
-.teamContainer {
+.main_image {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
