--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -6,32 +6,26 @@
     align-items: center;
 
     list-style: none;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: bold;
+    padding-top: 0.7rem;
 
     li {
-      text-transform: uppercase;
-      letter-spacing: 0.15em;
-      padding: 0.9rem 1.1rem;
-      position: relative;
-
-      &:after {
-        content: "";
-        background: none repeat scroll 0 0 transparent;
-        bottom: 0;
-        display: block;
-        height: 2px;
-        left: 50%;
-        position: absolute;
-        background: #333;
-        transition: width 0.3s ease 0s, left 0.3s ease 0s;
-        width: 0;
-      }
-
-      &:hover {
-        left: 0;
-        cursor: pointer;
-      }
+      padding: 0 0.7rem;
     }
+  }
+}
+
+.active {
+  color: #fff;
+}
+
+.link {
+  color: #fff;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+
+  &:hover {
+    text-decoration: none;
   }
 }
