--- a/src/sass/_fixtures.scss
+++ b/src/sass/_fixtures.scss
@@ -2,6 +2,7 @@
 
 .fixtures {
   color: #ffffff;
+  margin-bottom: 6rem;
   td {
     padding: 0.5rem 2rem;
     text-align: center;
@@ -24,4 +25,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  margin-top: 6rem;
 }
