added teams component and some styles

--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -17,7 +17,7 @@
 }
 
 .active {
-  color: #fff;
+  color: red;
 }
 
 .link {
@@ -27,5 +27,6 @@
 
   &:hover {
     text-decoration: none;
+    color: darken(#fff, 20%);
   }
 }
