--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -7,3 +7,61 @@
   justify-content: center;
   align-items: center;
 }
+
+.main_info_box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+
+  height: 100%;
+  padding: 1.8rem 0.5rem;
+  margin: 0.9rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+  span {
+    font-size: 0.8rem;
+    font-weight: normal;
+  }
+
+  h3 {
+    font-size: 0.9rem;
+    font-weight: bold;
+  }
+
+  img {
+    width: 8rem;
+    height: 8rem;
+  }
+
+  &:hover {
+    border: none;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 8px 8px rgba(0, 0, 0, 0.22);
+
+    span {
+      font-size: 1rem;
+    }
+
+    h3 {
+      font-size: 1.1rem;
+    }
+  }
+}
+
+.main_box_photo {
+  padding-right: 0.7rem;
+
+  img {
+    width: 8rem;
+    height: 8rem;
+  }
+}
+
+.main_box_content {
+  display: flex;
+  flex-direction: column;
+}
+
+.justify-content-center {
+  margin-bottom: 5rem;
+}
