--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -13,8 +13,8 @@
   justify-content: flex-start;
   align-items: flex-start;
 
-  height: 100%;
-  padding: 1.8rem 0.5rem;
+  height: 18rem;
+  padding: 4rem 1.5rem;
   margin: 0.9rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
