basic changes + styles

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,6 +1,4 @@
-$table-first-color: #ff0047;
-$table-second-color: #e10040;
-$table-third-color: #8a0036;
-$table-fourth-color: #ab0039;
+$body-background: #06011d;
 
-$table-title-color: #360037;
+$header_footer-background: #0f0736;
+$font-white-color: #ffffff;
