--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -1,22 +1,32 @@
 .main_image {
-  height: 100%;
+  height: 80%;
   width: 100%;
   margin: 5rem 0;
+  padding-bottom: 4rem;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @media (max-width: 970px) {
+    padding-bottom: 1rem;
+  }
+
+  img {
+    @media (max-width: 970px) {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
 .main_info_box {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-
-  height: 18rem;
+  background: #0f0736;
+  color: #ffffff;
+  height: 15rem;
   padding: 4rem 1.5rem;
-  margin: 0.9rem;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin: 0.9rem 0.9rem;
+  box-shadow: 0 1px 3px rgba(224, 217, 217, 0.12),
+    0 1px 2px rgba(224, 217, 217, 0.2);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
   span {
@@ -34,17 +44,12 @@
     height: 8rem;
   }
 
-  &:hover {
-    border: none;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 8px 8px rgba(0, 0, 0, 0.22);
-
-    span {
-      font-size: 1rem;
-    }
-
-    h3 {
-      font-size: 1.1rem;
-    }
+  @media (max-width: 991px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    padding: 0.1rem 0;
   }
 }
 
