--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -14,6 +14,9 @@
       padding: 0 0.7rem;
     }
   }
+  @media (max-width: 991px) {
+    display: none;
+  }
 }
 
 .active {
@@ -21,12 +24,76 @@
 }
 
 .link {
-  color: #fff;
+  color: #ffffff;
   font-size: 0.9rem;
   text-transform: uppercase;
 
   &:hover {
     text-decoration: none;
     color: darken(#fff, 20%);
+  }
+}
+
+.user_greeting_box {
+  background: #716aec;
+  border-radius: 50px;
+
+  @media (max-width: 991px) {
+    width: 50%;
+    background: none;
+  }
+
+  span {
+    padding: 0.9rem 0.7rem;
+    color: $font-white-color;
+
+    @media (max-width: 991px) {
+      padding: 0;
+      color: red;
+    }
+  }
+}
+
+.material-icons {
+  color: white;
+  font-size: 2rem;
+}
+
+.burger_menu {
+  display: none;
+  position: relative;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  @media (max-width: 991px) {
+    display: block;
+  }
+}
+
+.toggle_nav {
+  width: 50%;
+  height: 30%;
+  margin-bottom: 0.5rem;
+  position: absolute;
+  top: 80px;
+  left: 0;
+  background: #0f0736;
+  opacity: 0.7;
+  border-radius: 3px;
+  z-index: 1;
+
+  .toggle_nav_list {
+    list-style: none;
+    padding: 1.5rem;
+
+    li {
+      margin-top: 0.7rem;
+    }
+  }
+
+  @media (min-width: 992px) {
+    display: none;
   }
 }
