--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,4 @@
 @import "main";
-@import "select";
 @import "header";
 @import "logo";
 @import "standings";
@@ -10,6 +9,7 @@
 @import "navigation";
 @import "teams";
 @import "players";
+@import "signup";
 
 * {
   margin: 0;
