--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,4 +1,4 @@
 $body-background: #06011d;
-
-$header_footer-background: #0f0736;
+$main-color: #0f0736;
 $font-white-color: #ffffff;
+$border-color: #635bd1;
