--- a/src/sass/_players.scss
+++ b/src/sass/_players.scss
@@ -1,27 +1,70 @@
+@import "colors";
+
+.players_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 6rem 0;
+
+  h2 {
+    color: $font-white-color;
+    text-align: center;
+
+    @media (max-width: 685px) {
+      font-size: 1.2rem;
+    }
+  }
+}
+
 .players_box {
-  height: 11rem;
-  padding: 1.8rem 0.5rem;
+  height: 14rem;
+  padding: 4rem 1.5rem;
+  text-align: left;
   margin: 0.9rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border: solid $border-color 1px;
+  background: $main-color;
+  color: $font-white-color;
 
   span {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     font-weight: normal;
+    margin-bottom: 0.2rem;
+
+    @media (max-width: 1199px) {
+      font-size: 0.8rem;
+    }
   }
 
   h3 {
-    font-size: 0.9rem;
+    font-size: 1rem;
     font-weight: bold;
+
+    @media (max-width: 1199px) {
+      font-size: 0.8rem;
+    }
   }
 }
 
 .players_content_box {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   padding-left: 1rem;
-
   width: 100%;
+}
+
+.players_form {
+  border: solid $border-color 2px;
+  background: $main-color;
+  color: $font-white-color;
+
+  &:focus {
+    background: $main-color;
+    color: $font-white-color;
+  }
 }
