--- a/src/sass/_standings.scss
+++ b/src/sass/_standings.scss
@@ -18,7 +18,7 @@
   td {
     padding: 0.5rem 1.3rem;
     text-align: center;
-    border-bottom: solid $font-white-color 1px;
+    border-bottom: solid $border-color 1px;
   }
   .team-header {
     padding: 0.3rem 1.2rem;
@@ -43,7 +43,7 @@
   }
 
   .table_description {
-    background: #0f0736;
+    background: $main-color;
     color: $font-white-color;
     font-size: 0.8rem;
   }
@@ -69,11 +69,25 @@
   td {
     padding: 0.2rem 0.2rem;
     text-align: center;
-    border-bottom: solid $font-white-color 1px;
+    border-bottom: solid $border-color 1px;
+
+    @media (max-width: 830px) {
+      padding: 0.5rem 0.5rem;
+    }
+
+    @media (max-width: 490px) {
+      padding: 0.2rem 0.2rem;
+    }
   }
   .team {
     text-align: left;
   }
+
+  .table_description_xs {
+    background: $main-color;
+    border: solid $border-color 1px;
+  }
+
   th {
     text-align: center;
     padding-left: 0.1rem;
@@ -86,5 +100,18 @@
   }
   @media (max-width: 830px) {
     display: block;
+    font-size: 1rem;
+  }
+
+  @media (max-width: 610px) {
+    font-size: 0.8rem;
+  }
+
+  @media (max-width: 490px) {
+    font-size: 0.8rem;
+  }
+
+  @media (max-width: 410px) {
+    font-size: 0.6rem;
   }
 }
