--- a/src/sass/_fixtures.scss
+++ b/src/sass/_fixtures.scss
@@ -1,8 +1,26 @@
 @import "colors";
 
+.fixtures_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 5rem 0;
+
+  h2 {
+    color: $font-white-color;
+    text-align: center;
+    margin-bottom: 3rem;
+
+    @media (max-width: 685px) {
+      font-size: 1.2rem;
+    }
+  }
+}
+
 .fixtures {
   color: $font-white-color;
-  margin-bottom: 6rem;
   td {
     padding: 0.5rem 2rem;
     text-align: center;
@@ -34,27 +52,9 @@
   }
 }
 
-.fixtures_select {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-top: 6rem;
-
-  h2 {
-    color: $font-white-color;
-    text-align: center;
-
-    @media (max-width: 685px) {
-      font-size: 1.2rem;
-    }
-  }
-}
-
 .fixtures_result_home {
   background: $main-color;
-  color: #ffffff;
+  color: $font-white-color;
   padding: 0 0.7rem;
   border-right: 1px solid $font-white-color;
 }
@@ -69,6 +69,7 @@
   border: solid $border-color 2px;
   background: $main-color;
   color: $font-white-color;
+  margin-bottom: 3rem;
 
   &:focus {
     background: $main-color;
