--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -10,6 +10,9 @@ footer {
   justify-content: center;
   align-items: center;
 
+  position: absolute;
+  bottom: 0;
+
   .footer_container {
     display: flex;
     justify-content: flex-end;
