--- a/src/sass/_players.scss
+++ b/src/sass/_players.scss
@@ -6,12 +6,12 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 6rem 0;
+  margin: 5rem 0;
 
   h2 {
     color: $font-white-color;
     text-align: center;
-
+    margin-bottom: 3rem;
     @media (max-width: 685px) {
       font-size: 1.2rem;
     }
@@ -22,7 +22,7 @@
   height: 14rem;
   padding: 4rem 1.5rem;
   text-align: left;
-  margin: 0.9rem;
+  margin: 0.9rem 0.9rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   border: solid $border-color 1px;
@@ -62,6 +62,7 @@
   border: solid $border-color 2px;
   background: $main-color;
   color: $font-white-color;
+  margin-bottom: 3rem;
 
   &:focus {
     background: $main-color;
