--- a/src/sass/_standings.scss
+++ b/src/sass/_standings.scss
@@ -2,9 +2,8 @@
 // large
 
 .table_container {
-  margin-bottom: 2rem;
   height: 100vh;
-  margin: 6rem 0;
+  margin: 5rem 0;
 
   @media (max-width: 830px) {
     display: none;
@@ -53,13 +52,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin: 5rem 0;
+  h2 {
+    color: $font-white-color;
+    text-align: center;
+
+    @media (max-width: 490px) {
+      font-size: 1.1rem;
+    }
+  }
 }
 
 // xs
 
 .table_container_xs {
-  margin-bottom: 2rem;
-  margin: 6rem 0;
+  margin: 5rem 0;
   height: 100%;
   display: none;
   color: $font-white-color;
