--- a/src/sass/_fixtures.scss
+++ b/src/sass/_fixtures.scss
@@ -8,10 +8,19 @@
   text-align: center;
   margin: 5rem 0;
 
+  @media (max-width: 1199px) {
+    margin-top: 4rem;
+    margin-bottom: 5rem 0;
+  }
+
   h2 {
     color: $font-white-color;
     text-align: center;
     margin-bottom: 3rem;
+
+    @media (max-width: 1199px) {
+      font-size: 1.3rem;
+    }
 
     @media (max-width: 685px) {
       font-size: 1.2rem;
@@ -41,6 +50,14 @@
 
   @media (max-width: 1199px) {
     font-size: 0.9rem;
+  }
+
+  @media (max-width: 991px) {
+    font-size: 0.8rem;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 0.7rem;
   }
 
   @media (max-width: 685px) {
