--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -3,11 +3,7 @@
 .main_image {
   height: 80%;
   width: 100%;
-  margin: 5rem 0;
-
-  @media (max-width: 970px) {
-    padding-bottom: 1rem;
-  }
+  margin-top: 8rem;
 
   img {
     @media (max-width: 970px) {
