--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -1,8 +1,16 @@
 @import "colors";
 
+.signin_form_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .signin_form {
   color: $font-white-color;
   margin: 5rem 0;
+  border: 1px solid $border-color;
+  width: 40%;
+  padding-top: 1rem;
 
   h2 {
     text-align: center;
