styles + basic changes

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -2,3 +2,4 @@ $body-background: #06011d;
 $main-color: #0f0736;
 $font-white-color: #ffffff;
 $border-color: #635bd1;
+$second-color: darken($border-color, 35%);
