--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,7 +1,7 @@
 @import "colors";
 
 footer {
-  background: $main-color;
+  background: $second-color;
   min-height: 5rem;
   width: 100%;
   color: $font-white-color;
