--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,7 +3,7 @@
 header {
   max-height: 6rem;
   width: 100%;
-  background: $main-color;
+  background: $second-color;
 
   @media (max-width: 575px) {
     padding: 0 1rem;
