--- a/src/sass/_loading.scss
+++ b/src/sass/_loading.scss
@@ -1,3 +1,5 @@
+@import "colors";
+
 .loading {
   position: fixed;
   z-index: 999;
@@ -11,7 +13,6 @@
   right: 0;
 }
 
-/* Transparent Overlay */
 .loading:before {
   content: "";
   display: block;
@@ -20,11 +21,11 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(rgba(20, 20, 20, 0.8), rgba(0, 0, 0, 0.8));
+  background: radial-gradient(rgba(12, 6, 45, 0.8), rgba(31, 26, 95, 0.8));
 
   background: -webkit-radial-gradient(
-    rgba(20, 20, 20, 0.8),
-    rgba(0, 0, 0, 0.8)
+    rgba(12, 6, 45, 0.8),
+    rgba(31, 26, 95, 0.8)
   );
 }
 
