--- a/src/sass/_players.scss
+++ b/src/sass/_players.scss
@@ -26,7 +26,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   border: solid $border-color 1px;
-  background: $main-color;
+  background: $second-color;
   color: $font-white-color;
 
   span {
@@ -58,14 +58,14 @@
   width: 100%;
 }
 
-.players_form {
+.players_select {
   border: solid $border-color 2px;
-  background: $main-color;
+  background: $second-color;
   color: $font-white-color;
   margin-bottom: 3rem;
 
   &:focus {
-    background: $main-color;
+    background: $second-color;
     color: $font-white-color;
   }
 }
