--- a/src/sass/_scorers.scss
+++ b/src/sass/_scorers.scss
@@ -5,11 +5,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  align-items: center;
   margin: 5rem 0;
 
   h2 {
     color: $font-white-color;
-    text-align: center;
+    margin-bottom: 3rem;
 
     @media (max-width: 685px) {
       font-size: 1.2rem;
@@ -17,8 +18,9 @@
   }
 }
 
-.scorers {
+.scorers_table {
   color: $font-white-color;
+  background: $second-color;
 
   td {
     padding: 0.5rem 1.3rem;
@@ -46,19 +48,11 @@
   }
 }
 
-.scorers-header {
-  padding: 0.3rem 1.3rem;
-  text-align: left;
-}
 th {
   text-align: center;
 }
 
-.team {
-  text-align: left;
-}
-
-.scorers_description {
+.scorers_table__header {
   background: $main-color;
   color: $font-white-color;
   font-size: 0.8rem;
