--- a/src/sass/_signin.scss
+++ b/src/sass/_signin.scss
@@ -1,6 +1,6 @@
 @import "colors";
 
-.signin_form_container {
+.signin_container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,9 +8,17 @@
 .signin_form {
   color: $font-white-color;
   margin: 5rem 0;
-  border: 1px solid $border-color;
-  width: 40%;
+  width: 50%;
   padding-top: 1rem;
+  background: $second-color;
+  box-shadow: 0px 1px 5px rgba(177, 52, 52, 0);
+  transition: all 1.6s;
+
+  &:hover {
+    transform: scale(1.1, 1.1);
+    box-shadow: 1px 5px 14px rgba(0, 0, 0, 3);
+    z-index: 1;
+  }
 
   h2 {
     text-align: center;
@@ -29,15 +37,15 @@
     align-items: center;
   }
 
-  .signin_button_container {
+  .signin_button__container {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 3rem;
 
     .signin_button {
-      background: $main-color;
       padding: 0.5rem 1.5rem;
+      background: transparent;
 
       &:hover {
         background: lighten($main-color, 20%);
@@ -45,11 +53,20 @@
     }
   }
 
-  .login_error {
+  .signin_error {
     display: flex;
     justify-content: center;
     align-items: center;
 
     margin-top: 1.5rem;
   }
+}
+
+.ball_icon__container {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+.ball_icon {
+  font-size: 5rem;
 }
