--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 @import "signup";
 @import "signin";
 @import "loading";
+@import "myTeam";
 
 * {
   margin: 0;
@@ -28,6 +29,6 @@ html {
 }
 body {
   min-height: 100%;
-  background: $body-background;
+  background: darken($main-color, 2%);
   position: relative;
 }
