basic changes + style

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -2,4 +2,5 @@ $body-background: #06011d;
 $main-color: #0f0736;
 $font-white-color: #ffffff;
 $border-color: #635bd1;
-$second-color: darken($border-color, 35%);
+$second-color: #1f1a5f;
+$green-color: #50ff86;
