--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -3,7 +3,16 @@
 header {
   max-height: 6rem;
   width: 100%;
-  background: $second-color;
+  background: linear-gradient(
+    135deg,
+    rgba(80, 255, 134, 1) 0%,
+    rgba(80, 255, 134, 1) 4%,
+    rgba(99, 91, 209, 1) 28%,
+    rgba(31, 26, 95, 1) 38%,
+    rgba(31, 26, 95, 1) 75%,
+    rgba(31, 26, 95, 1) 92%,
+    rgba(31, 26, 95, 1) 100%
+  );
 
   @media (max-width: 575px) {
     padding: 0 1rem;
