--- a/src/sass/_myTeam.scss
+++ b/src/sass/_myTeam.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
 
-  margin: 5rem 0;
+  margin-bottom: 5rem;
 }
 
 .myTeam_box {
@@ -13,24 +13,73 @@
   flex-direction: column;
   color: $font-white-color;
   text-align: center;
-  margin-bottom: 5rem;
+  padding: 3rem;
+  position: relative;
+
+  color: $font-white-color;
+  background: $second-color;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 1em;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -5px;
+    border-radius: inherit;
+    background: linear-gradient(
+      135deg,
+      rgba(80, 255, 134, 1) 0%,
+      rgba(80, 255, 134, 1) 4%,
+      rgba(99, 91, 209, 1) 24%,
+      rgba(182, 54, 217, 1) 48%,
+      rgba(154, 59, 250, 1) 75%,
+      rgb(40, 35, 104) 89%,
+      rgb(51, 45, 134) 100%
+    );
+  }
 
   h4 {
-    padding: 0.4rem 0;
+    padding: 0.7rem 0;
+    border-bottom: 1px solid $border-color;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: $green-color;
+
+    @media (max-width: 500px) {
+      font-size: 1rem;
+      padding: 0.4rem 0;
+    }
+
+    @media (max-width: 451px) {
+      font-size: 0.9rem;
+      padding: 0.4rem 0;
+    }
   }
 
   span {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: $font-white-color;
+
+    @media (max-width: 451px) {
+      font-size: 0.8rem;
+    }
   }
 
   a {
     text-decoration: none;
     display: block;
-    color: $font-white-color;
+    color: $green-color;
+    text-transform: uppercase;
 
     &:hover {
       transform: scale(1.1);
-      color: $border-color;
     }
   }
 
@@ -38,5 +87,26 @@
     width: 20rem;
     height: 20rem;
     margin-bottom: 0.4rem;
+
+    @media (max-width: 759px) {
+      width: 15rem;
+      height: 15rem;
+    }
+
+    @media (max-width: 451px) {
+      width: 8rem;
+      height: 8rem;
+    }
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 7rem;
+    padding: 2rem;
+  }
+  @media (max-width: 497px) {
+    padding: 1.5rem;
+  }
+  @media (max-width: 451px) {
+    padding: 1rem;
   }
 }
