--- a/src/sass/_players.scss
+++ b/src/sass/_players.scss
@@ -6,63 +6,132 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 5rem 0;
+  margin-bottom: 6rem;
+  word-wrap: break-word;
+
+  @media (max-width: 517px) {
+    margin-bottom: 4rem;
+  }
+  @media (max-width: 490px) {
+    margin-bottom: 5rem;
+  }
 
   h2 {
     color: $font-white-color;
     text-align: center;
-    margin-bottom: 3rem;
-    @media (max-width: 685px) {
-      font-size: 1.2rem;
-    }
-  }
-}
-
-.players_box {
-  height: 14rem;
-  padding: 4rem 1.5rem;
-  text-align: left;
-  margin: 0.9rem 0.9rem;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  border: solid $border-color 1px;
-  background: $second-color;
-  color: $font-white-color;
-
-  span {
-    font-size: 0.9rem;
-    font-weight: normal;
-    margin-bottom: 0.2rem;
-
-    @media (max-width: 1199px) {
-      font-size: 0.8rem;
-    }
-  }
-
-  h3 {
-    font-size: 1rem;
+    word-spacing: -5px;
+    padding-bottom: 4rem;
     font-weight: bold;
 
-    @media (max-width: 1199px) {
-      font-size: 0.8rem;
+    @media (max-width: 991px) {
+      padding-top: 3rem;
+      font-size: 1.6rem;
+    }
+
+    @media (max-width: 490px) {
+      margin-top: 3rem;
+      font-size: 1.1rem;
     }
   }
 }
 
-.players_content_box {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  padding-left: 1rem;
-  width: 100%;
+.players_table {
+  color: $font-white-color;
+  white-space: nowrap;
+  overflow: hidden;
+
+  @media (max-width: 1199px) {
+    font-size: 0.9rem;
+  }
+
+  @media (max-width: 720px) {
+    font-size: 0.8rem;
+  }
+
+  @media (max-width: 646px) {
+    font-size: 0.7rem;
+  }
+
+  @media (max-width: 567px) {
+    font-size: 0.6rem;
+  }
+
+  @media (max-width: 496px) {
+    font-size: 0.5rem;
+    font-weight: bold;
+  }
+
+  td {
+    padding: 0.5rem 2rem;
+    text-align: center;
+    border-bottom: solid $border-color 1px;
+    @media (max-width: 898px) {
+      padding: 0.5rem 0.9rem;
+    }
+    @media (max-width: 767px) {
+      padding: 0.4rem 0.8rem;
+    }
+
+    @media (max-width: 575px) {
+      padding: 0.3rem 0.7rem;
+    }
+    @media (max-width: 517px) {
+      padding: 0.3rem 0.6rem;
+    }
+    @media (max-width: 452px) {
+      padding: 0.3rem 0.5rem;
+    }
+    @media (max-width: 425px) {
+      padding: 0.3rem 0.4rem;
+    }
+    @media (max-width: 452px) {
+      padding: 0.3rem 0.3rem;
+    }
+    @media (max-width: 409px) {
+      padding: 0.4rem 0.3rem;
+    }
+  }
+  .players_table__name {
+    padding: 0.2rem 1.2rem;
+  }
+  th {
+    text-align: center;
+    padding-left: 0.3rem;
+
+    @media (max-width: 452px) {
+      font-size: 0.5rem;
+    }
+  }
+
+  .table_list__team {
+    text-align: left;
+  }
+
+  .players_list__positions {
+    color: $font-white-color;
+    background: $second-color;
+  }
+
+  .players_table__header {
+    background: $green-color;
+    color: $second-color;
+    font-size: 0.8rem;
+  }
 }
 
 .players_select {
-  border: solid $border-color 2px;
+  border: solid $green-color 2px;
   background: $second-color;
   color: $font-white-color;
   margin-bottom: 3rem;
+
+  @media (max-width: 720px) {
+    font-size: 0.9rem;
+  }
+
+  @media (max-width: 496px) {
+    font-size: 0.8rem;
+  }
 
   &:focus {
     background: $second-color;
