--- a/src/sass/_scorers.scss
+++ b/src/sass/_scorers.scss
@@ -5,12 +5,19 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  align-items: center;
-  margin: 5rem 0;
+  margin-bottom: 5rem;
 
   h2 {
     color: $font-white-color;
-    margin-bottom: 3rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 7rem;
+    word-spacing: -5px;
+
+    @media (max-width: 991px) {
+      padding-top: 5rem;
+      font-size: 1.6rem;
+    }
 
     @media (max-width: 685px) {
       font-size: 1.2rem;
@@ -22,38 +29,85 @@
   color: $font-white-color;
   background: $second-color;
 
-  td {
-    padding: 0.5rem 1.3rem;
-    text-align: center;
-    border-bottom: solid $border-color 1px;
-
-    @media (max-width: 685px) {
-      padding: 0.1rem 0.1rem;
-    }
-  }
   @media (max-width: 1199px) {
     font-size: 0.9rem;
+  }
+
+  @media (max-width: 991px) {
+    font-size: 0.8rem;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 0.8rem;
   }
 
   @media (max-width: 685px) {
     font-size: 0.8rem;
   }
 
-  @media (max-width: 447px) {
+  @media (max-width: 527px) {
     font-size: 0.7rem;
   }
-
-  @media (max-width: 320px) {
+  @media (max-width: 399px) {
     font-size: 0.6rem;
+  }
+
+  td {
+    padding: 0.5rem 2rem;
+    text-align: center;
+    border-bottom: solid $border-color 1px;
+
+    @media (max-width: 991px) {
+      padding: 0.4rem 1rem;
+    }
+
+    @media (max-width: 767px) {
+      padding: 0.3rem 1.6rem;
+    }
+
+    @media (max-width: 685px) {
+      padding: 0.2rem 1.4rem;
+    }
+
+    @media (max-width: 573px) {
+      padding: 0.2rem 1.1rem;
+    }
+
+    @media (max-width: 527px) {
+      padding: 0.2rem 0.9rem;
+    }
+
+    @media (max-width: 497px) {
+      padding: 0.2rem 0.7rem;
+    }
+
+    @media (max-width: 458px) {
+      padding: 0.2rem 0.5rem;
+    }
+
+    @media (max-width: 399px) {
+      padding: 0.2rem 0.4rem;
+    }
+
+    @media (max-width: 363px) {
+      padding: 0.2rem 0.3rem;
+    }
+    @media (max-width: 350px) {
+      padding: 0.2rem 0.2rem;
+    }
   }
 }
 
 th {
   text-align: center;
+
+  @media (max-width: 527px) {
+    font-size: 0.7rem;
+  }
 }
 
 .scorers_table__header {
-  background: $main-color;
-  color: $font-white-color;
+  background: $green-color;
+  color: $second-color;
   font-size: 0.8rem;
 }
