--- a/src/sass/_signup.scss
+++ b/src/sass/_signup.scss
@@ -3,30 +3,61 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5rem;
 }
 .signup_form {
   color: $font-white-color;
-  margin: 5rem 0;
   width: 50%;
-  padding-top: 1rem;
+  padding-top: 2rem;
+  position: relative;
+
   background: $second-color;
-  box-shadow: 0px 1px 5px rgba(177, 52, 52, 0);
-  transition: all 1.6s;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  border-radius: 1em;
 
-  &:hover {
-    transform: scale(1.1, 1.1);
-    box-shadow: 1px 5px 14px rgba(0, 0, 0, 3);
-    z-index: 1;
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -5px;
+    border-radius: inherit;
+    background: linear-gradient(
+      135deg,
+      rgba(80, 255, 134, 1) 0%,
+      rgba(80, 255, 134, 1) 4%,
+      rgba(99, 91, 209, 1) 24%,
+      rgba(182, 54, 217, 1) 48%,
+      rgba(154, 59, 250, 1) 75%,
+      rgb(40, 35, 104) 89%,
+      rgb(51, 45, 134) 100%
+    );
   }
-
   h2 {
     text-align: center;
     margin-bottom: 3rem;
+    font-weight: bold;
+
+    @media (max-width: 552px) {
+      font-size: 1.5rem;
+    }
   }
 
   .form_control_signup {
     &:focus {
       border: solid $border-color 3px;
+    }
+  }
+
+  .signup_label {
+    span {
+      @media (max-width: 552px) {
+        font-size: 0.9rem;
+      }
     }
   }
 
@@ -36,6 +67,20 @@
     align-items: center;
   }
 
+  .signup_select {
+    border: solid $green-color 2px;
+    background: $second-color;
+    color: $font-white-color;
+
+    @media (max-width: 720px) {
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 496px) {
+      font-size: 0.8rem;
+    }
+  }
+
   .signup_button_container {
     display: flex;
     justify-content: center;
@@ -43,11 +88,20 @@
     margin-top: 3rem;
 
     .signup_button {
-      background: $main-color;
       padding: 0.5rem 1.5rem;
+      background: $green-color;
+      border-color: $green-color;
+      color: $second-color;
+      font-weight: bold;
 
       &:hover {
-        background: lighten($main-color, 20%);
+        background: transparent;
+        color: $font-white-color;
+      }
+
+      @media (max-width: 552px) {
+        padding: 0.3rem 1.2rem;
+        font-size: 0.9rem;
       }
     }
   }
@@ -56,7 +110,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color: red;
+    text-align: center;
+    margin: 2rem 0;
+    font-weight: bold;
 
-    margin-top: 1.5rem;
+    @media (max-width: 552px) {
+      font-size: 0.9rem;
+    }
+  }
+  @media (max-width: 1199px) {
+    width: 60%;
+  }
+  @media (max-width: 991px) {
+    margin-top: 7rem;
+    width: 80%;
+  }
+  @media (max-width: 767px) {
+    width: 90%;
+  }
+  @media (max-width: 475px) {
+    width: 100%;
   }
 }
