--- a/src/sass/_standings.scss
+++ b/src/sass/_standings.scss
@@ -1,32 +1,109 @@
 @import "colors";
 
-// large
+.standings_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 6rem;
 
-.table_container__large {
-  height: 100vh;
-  margin: 5rem 0;
+  @media (max-width: 517px) {
+    margin-bottom: 4rem;
+  }
+  @media (max-width: 490px) {
+    margin-bottom: 2rem;
+  }
 
-  @media (max-width: 830px) {
-    display: none;
+  h2 {
+    color: $font-white-color;
+    font-weight: bold;
+    text-align: center;
+    word-spacing: -5px;
+    padding-bottom: 4rem;
+
+    @media (max-width: 991px) {
+      padding-top: 3rem;
+    }
+
+    @media (max-width: 490px) {
+      font-size: 1.1rem;
+    }
+  }
+  @media (max-width: 490px) {
+    padding: 3rem 0;
   }
 }
 
-.table_large {
+.standings_table {
   color: $font-white-color;
   white-space: nowrap;
   overflow: hidden;
+
+  @media (max-width: 1199px) {
+    font-size: 0.9rem;
+  }
+
+  @media (max-width: 720px) {
+    font-size: 0.8rem;
+  }
+
+  @media (max-width: 646px) {
+    font-size: 0.7rem;
+  }
+
+  @media (max-width: 567px) {
+    font-size: 0.6rem;
+  }
+
+  @media (max-width: 496px) {
+    font-size: 0.5rem;
+  }
+
   td {
     padding: 0.5rem 1.3rem;
     text-align: center;
     border-bottom: solid $border-color 1px;
+
+    @media (max-width: 898px) {
+      padding: 0.5rem 0.9rem;
+    }
+    @media (max-width: 767px) {
+      padding: 0.4rem 0.7rem;
+    }
+
+    @media (max-width: 575px) {
+      padding: 0.3rem 0.6rem;
+    }
+    @media (max-width: 517px) {
+      padding: 0.3rem 0.5rem;
+    }
+    @media (max-width: 452px) {
+      padding: 0.3rem 0.4rem;
+    }
+    @media (max-width: 425px) {
+      padding: 0.3rem 0.3rem;
+    }
+    @media (max-width: 452px) {
+      padding: 0.3rem 0.2rem;
+    }
+    @media (max-width: 409px) {
+      padding: 0.2rem 0.1rem;
+    }
   }
-  .table_team {
+  .standings_table__team {
     padding: 0.3rem 1.2rem;
     text-align: left;
   }
   th {
     text-align: center;
     padding-left: 0.3rem;
+
+    @media (max-width: 452px) {
+      font-size: 0.7rem;
+    }
+    @media (max-width: 403px) {
+      font-size: 0.6rem;
+    }
   }
 
   .table_list__team {
@@ -35,6 +112,12 @@
       width: 1.5rem;
       height: 1.5rem;
       margin-right: 0.7rem;
+
+      @media (max-width: 517px) {
+        width: 1.2rem;
+        height: 1.2rem;
+        margin-right: 0.7rem;
+      }
     }
   }
 
@@ -43,91 +126,12 @@
     background: $second-color;
   }
 
-  .table_header {
-    background: $main-color;
-    color: $font-white-color;
+  .standings_table__header {
+    background: $green-color;
+    color: $second-color;
     font-size: 0.8rem;
   }
 }
-
-.standings_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 5rem 0;
-  h2 {
-    color: $green-color;
-    font-weight: bold;
-    text-align: center;
-
-    @media (max-width: 490px) {
-      font-size: 1.1rem;
-    }
-  }
-}
-
-// small
-
-.table_container__small {
-  margin: 5rem 0;
-  height: 100%;
-  display: none;
-  color: $font-white-color;
-  font-size: 0.9rem;
-  white-space: nowrap;
-
-  td {
-    padding: 0.2rem 0.2rem;
-    text-align: center;
-    border-bottom: solid $border-color 1px;
-
-    @media (max-width: 830px) {
-      padding: 0.5rem 0.5rem;
-    }
-
-    @media (max-width: 490px) {
-      padding: 0.2rem 0.2rem;
-    }
-  }
-  .table_list__team {
-    text-align: left;
-  }
-
-  .table_header_small {
-    background: $main-color;
-    border: solid $border-color 1px;
-  }
-
-  th {
-    text-align: center;
-    padding-left: 0.1rem;
-  }
-
-  img {
-    width: 0.7rem;
-    height: 0.7rem;
-    margin-right: 0.3rem;
-  }
-  @media (max-width: 830px) {
-    display: block;
-    font-size: 1rem;
-  }
-
-  @media (max-width: 610px) {
-    font-size: 0.8rem;
-  }
-
-  @media (max-width: 490px) {
-    font-size: 0.8rem;
-  }
-
-  @media (max-width: 410px) {
-    font-size: 0.6rem;
-  }
-}
-
-// tableList
 
 .table_list__positions {
   color: $font-white-color;
