--- a/src/sass/_teams.scss
+++ b/src/sass/_teams.scss
@@ -1,7 +1,7 @@
 .teams_list {
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 
   padding-top: 2rem;
   margin-bottom: 5rem;
